--- a/projeto05/style/style.css
+++ b/projeto05/style/style.css
@@ -15,7 +15,8 @@
 
   font-size: 62.5%;
   --fs-body: 1.6rem;
-  --fs-heading: 4rem;
+  --fs-heading: clamp(4rem, 1rem + 5vw, 5.6rem);
+  --fs-heading-sm: clamp(3rem, 0.5rem + 3vw, 4rem);
 }
 body {
   font-family: var(--ff-texting);
@@ -29,10 +30,7 @@ body {
   max-width: 33rem;
   margin: 0 auto;
 }
-main {
-  display: grid;
-  gap: 3.2rem;
-}
+
 img {
   width: 100%;
   height: auto;
@@ -42,6 +40,10 @@ header {
   font-family: var(--ff-heading);
 
   text-align: center;
+  animation: topdown 700ms;
+}
+header:hover {
+  animation-play-state: running;
 }
 header p {
   color: var(--fc-secondary);
@@ -59,6 +61,13 @@ header h1 {
   font-size: var(--fs-heading);
   line-height: 4.8rem;
 }
+main {
+  display: grid;
+  gap: 3.2rem;
+
+  padding-bottom: 10rem;
+  animation: downtop 700ms 350ms backwards;
+}
 .card {
   position: relative;
   font-family: var(--ff-heading);
@@ -68,13 +77,20 @@ header h1 {
   object-fit: cover;
 
   border-radius: 6px;
+  transition: all 200ms;
+
+  filter: brightness(0.5);
+}
+.card img:hover {
+  transform: scale(1.1);
+  opacity: 0.7;
 }
 .card h2 {
   position: absolute;
   bottom: 5.2rem;
   left: 2.8rem;
 
-  font-size: var(--fs-heading);
+  font-size: var(--fs-heading-sm);
   height: 800;
 
   display: flex;
@@ -93,4 +109,53 @@ header h1 {
 
   display: inline-flex;
   align-items: center;
+}
+
+@keyframes topdown {
+  0% {
+    opacity: 0;
+    transform: translateX(-15px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes downtop {
+  0% {
+    opacity: 0;
+    transform: translateX(15px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@media (min-width: 700px) {
+  .page {
+    max-width: 117rem;
+    padding: 0 5rem;
+  }
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 930px) {
+  main {
+    grid-template-areas:
+      "A B B"
+      "C C D";
+  }
+  main div:nth-child(1) {
+    grid-area: A;
+  }
+  main div:nth-child(2) {
+    grid-area: B;
+  }
+  main div:nth-child(3) {
+    grid-area: C;
+  }
+  main div:nth-child(4) {
+    grid-area: D;
+  }
 }
