--- a/projeto05-extra/style/style.css
+++ b/projeto05-extra/style/style.css
@@ -4,213 +4,235 @@
   box-sizing: border-box;
 }
 :root {
-  --fs-title: "Staatliches", cursive;
-  --fs-texting: "Palanquin", sans-serif;
-
-  --fs-texting-web: "Roboto", sans-serif;
-  --fs-footer-web: "Open Sans", sans-serif;
+  --fs-mobile-title: "Staatliches", cursive;
+  --fs-mobile-text: "Palanquin", sans-serif;
+  --fs-web-text-header: "Roboto", sans-serif;
+  --fs-web-text-contact: "Open Sans", sans-serif;
 
   --bg-header: hsla(218, 17%, 62%, 1);
-  --bg-titleHeader: hsla(275, 18%, 79%, 1);
-  --bg-spanCard: hsla(312, 91%, 96%, 1);
-  --bg-main: hsla(233, 100%, 97%, 1);
+  --bg-title-header: hsla(275, 18%, 79%, 1);
   --fc-title: hsla(0, 0%, 100%, 1);
-  --fc-texting: hsla(274, 84%, 12%, 1);
-  --fc-titleCard: hsla(232, 17%, 35%, 1);
+
+  --fc-bg-main: hsla(233, 100%, 97%, 1);
+  --fc-main-text: hsla(274, 84%, 12%, 1);
+  --fc-item: hsla(312, 91%, 96%, 1);
+  --bg-main-item: hsla(232, 17%, 35%, 1);
 
   font-size: 62.5%;
 }
-
 .page {
-  width: 38.4rem;
+  width: 38.5rem;
   margin: 0 auto;
 }
 header {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
   gap: 3.2rem;
-  padding: 3.2rem 0 2.9rem;
+
+  width: 38.5rem;
+  height: 27.9rem;
 
   background-color: var(--bg-header);
-  animation: downtop 700ms 350ms backwards;
 }
-header p {
-  display: none;
-}
-header span {
-  background-color: var(--bg-titleHeader);
-  width: 100%;
-  height: 4.9rem;
-}
-header span h1 {
-  text-align: center;
-  font-size: 4rem;
-  font-weight: 400;
-  font-family: var(--fs-title);
-  color: var(--fc-title);
-  letter-spacing: 0.05em;
-
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-}
-main {
-  background-color: var(--bg-main);
-  padding: 0 3.2rem 6rem;
-
-  display: flex;
-  flex-direction: column;
-  gap: 6.3rem;
-
-  animation: topdown 700ms 350ms backwards;
-}
-
-p {
-  margin-top: 1.4rem;
-
-  font-family: var(--fs-texting);
-  color: var(--fc-texting);
-
-  font-size: 1.4rem;
-  line-height: 1.6rem;
-  text-align: center;
-}
-.ice-cream-box {
-  display: grid;
-  gap: 3.2rem;
-}
-.ice-cream {
-  position: relative;
-}
-.ice-cream:hover {
-  transform: scale(1.1);
-}
-.ice-cream div {
-  position: absolute;
-  top: 1.6rem;
-  right: 1.6rem;
-  width: 6.5rem;
-  height: 3.4rem;
-  border-radius: 20rem;
-  padding: 1rem 5.5rem;
-
-  background-color: var(--bg-spanCard);
+.box-title {
   display: flex;
   align-items: center;
   justify-content: center;
 
-  color: var(--fc-titleCard);
-  text-transform: uppercase;
-  font-family: var(--fs-title);
-  font-size: 1.6rem;
-  font-weight: 400;
+  width: 38.5rem;
+  height: 4.9rem;
+
+  background-color: var(--bg-title-header);
+}
+header p {
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
+  font-family: var(--fs-mobile-title);
+  color: var(--fc-title);
+  font-size: 4rem;
   line-height: 3.4rem;
+  letter-spacing: 0.5px;
 }
-.contact {
-  display: none;
+main {
+  width: 38.5rem;
+  padding: 1.6rem 3.2rem 6rem 3.2rem;
+  background-color: var(--fc-bg-main);
 }
-@keyframes topdown {
-  0% {
-    opacity: 0;
-    transform: translateY(-15px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.box-paragraph {
+  margin-bottom: 6.3rem;
+  width: 30.5rem;
+  text-align: center;
+  color: var(--fc-main-text);
+  font-family: var(--fs-mobile-text);
+  line-height: 1.5rem;
+  font-size: 1.35rem;
 }
-@keyframes downtop {
-  0% {
-    opacity: 0;
-    transform: translateX(15px);
+.ice-cream-box {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+.ice-item {
+  position: relative;
+}
+.ice-item div {
+  width: 11.2rem;
+  height: 3.5rem;
+  border-radius: 2rem;
+
+  background-color: var(--fc-item);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: var(--fs-mobile-title);
+  font-size: 2rem;
+  line-height: 3.4rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--bg-main-item);
+
+  position: absolute;
+  top: 17px;
+  right: 17px;
+}
+@media (min-width: 200px) {
+  .box-text {
+    display: none;
   }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
+  .group-item2 {
+    display: none;
+  }
+  .group-item1,
+  .group-item3 {
+    display: grid;
+    gap: 3.2rem;
+  }
+  .box-contact {
+    display: none;
   }
 }
 @media (min-width: 768px) {
   .page {
-    width: 70rem;
+    width: 50rem;
+  }
+  header {
+    width: 50rem;
+  }
+  .box-text {
+    display: none;
+  }
+  .box-title {
+    width: 50rem;
   }
   main {
-    width: 70rem;
+    width: 50rem;
+  }
+  .box-paragraph {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    width: 40rem;
+    margin: 0 auto;
+    margin-bottom: 6.3rem;
+  }
+  .ice-item {
     margin: 0 auto;
   }
-  main p {
+}
+@media (min-width: 900px) {
+  .page {
+    width: 80rem;
+  }
+  header {
+    width: 80rem;
+  }
+  .box-title {
+    width: 80rem;
+  }
+  .box-text {
+    display: none;
+  }
+  main {
+    width: 80rem;
+  }
+  .box-paragraph {
     font-size: 2rem;
-    line-height: 2rem;
+    line-height: 2.5rem;
+    width: 60rem;
+    margin: 0 auto;
+    margin-bottom: 6.3rem;
   }
   .ice-cream-box {
-    grid-template-areas:
-      "A B"
-      "C D";
-  }
-  .ice-cream img {
-    width: 30rem;
-  }
-  .ice-cream div {
-    left: 12px;
-  }
-  .ice-cream:nth-child(1) {
-    grid-area: A;
-  }
-  .ice-cream:nth-child(3) {
-    grid-area: B;
+    display: grid;
+    grid-template-areas: "A B";
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1200px) {
   .page {
-    width: 120rem;
+    margin: 0;
+    width: 100vw;
     display: flex;
   }
   header {
+    justify-content: start;
+    padding-top: 1.6rem;
     width: 37.7rem;
-    height: 105vh;
+    height: 100vh;
   }
-  header p {
+  .box-title {
+    width: 100%;
+  }
+  .box-text {
     display: block;
-    width: 27.5rem;
-    height: 26.2rem;
-    font-size: 2.2rem;
+    font-family: var(--fs-web-text-header);
+    font-size: 1.7rem;
     line-height: 2.2rem;
-    font-family: var(--fs-texting-web);
+    text-align: center;
     color: var(--fc-title);
+    padding: 3.2rem;
   }
-  main {
-    width: 120rem;
-    margin-left: 0;
-    height: fit-content;
-  }
-  main p {
+  .box-paragraph {
     display: none;
   }
+  main {
+    width: 100vw;
+    height: 100vh;
+    padding-left: 9.8rem;
+  }
+  .group-item2 {
+    display: grid;
+    gap: 3.2rem;
+  }
   .ice-cream-box {
-    grid-template-areas:
-      "A B C"
-      "D F E"
-      "D F E";
+    grid-template-areas: "A B C";
   }
-  .ice-cream {
-    height: fit-content;
+  .ice-item img {
+    width: 28rem;
   }
-  .ice-cream:nth-child(1) {
+  .group-item2 {
     grid-area: A;
   }
-  .ice-cream:nth-child(2) {
-    grid-area: B;
+  .group-item1 {
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
   }
-  .ice-cream:nth-child(3) {
-    grid-area: F;
+  .order1 {
+    order: 2;
   }
-
-  .ice-cream:nth-child(5) {
-    grid-area: C;
+  .order2 {
+    order: 1;
   }
-  .contact {
+  .box-contact {
     display: block;
     text-align: center;
-    color: var(--fc-titleCard);
+    margin-top: 5rem;
     font-size: 1.4rem;
-    line-height: 2.8rem;
+    line-height: 2rem;
+    font-family: var(--fs-web-text-contact);
+    color: var(--bg-main-item);
   }
 }
